// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for aspectRatio: { base: '1:1', xs: '4:3', s: '3:4', m: '16:9', l: '9:16', xl: '1:1' }, size: {
  base: 'inherit',
  xs: 'default',
  s: 'inherit',
  m: 'default',
  l: 'inherit',
  xl: 'default'
}, weight: {
  base: 'semibold',
  xs: 'regular',
  s: 'semibold',
  m: 'regular',
  l: 'semibold',
  xl: 'regular'
}, align: top, isCompact: { base: true, xs: false, s: true, m: false, l: true, xl: false } and hasGradient: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture),::slotted(img) {
  transition: transform var(--p-transition-duration, .24s) ease !important;
  backface-visibility: hidden !important;
  -webkit-backface-visibility: hidden !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
p {
  color: #FBFCFF;
  max-width: 34.375rem;
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: inherit;
  font-weight: 600;
}
@media(min-width:480px) {
  p {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 400;
  }
}

@media(min-width:760px) {
  p {
    font-size: inherit;
    font-weight: 600;
  }
}

@media(min-width:1000px) {
  p {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 400;
  }
}

@media(min-width:1300px) {
  p {
    font-size: inherit;
    font-weight: 600;
  }
}

@media(min-width:1760px) {
  p {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 400;
  }
}

.root {
  height: 0;
  position: relative;
  transform: translate3d(0,0,0);
  padding-top: 100%;
}
.image-container {
  position: absolute;
  overflow: hidden;
  border-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  display: grid;
  justify-items: start;
  border-radius: 8px;
  padding: clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px) clamp(32px, 2.75vw + 23px, 76px);
  gap: 16px;
  background: linear-gradient(rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
  align-items: center;
  grid-template-columns: auto 24px;
  grid-template-rows: auto;
}
.link-pure {
  display: inline-block;
}
.link {
  min-height: 54px;
  display: none;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 0;
}
@media(min-width:480px) {
  .root {
    padding-top: 75%;
  }
  .content {
    background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
    grid-template-rows: auto auto;
    grid-template-columns: auto;
  }
  .link-pure {
    display: none;
  }
  .link {
    display: inline-block;
  }
}

@media(min-width:760px) {
  .root {
    padding-top: 133.33%;
  }
  .content {
    background: linear-gradient(rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
    align-items: center;
    grid-template-columns: auto 24px;
    grid-template-rows: auto;
    top: 0;
  }
  .link-pure {
    display: inline-block;
  }
  .link {
    display: none;
  }
}

@media(min-width:1000px) {
  .root {
    padding-top: 56.25%;
  }
  .content {
    background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
    grid-template-rows: auto auto;
    grid-template-columns: auto;
  }
  .link-pure {
    display: none;
  }
  .link {
    display: inline-block;
  }
}

@media(min-width:1300px) {
  .root {
    padding-top: 177.75%;
  }
  .content {
    background: linear-gradient(rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
    align-items: center;
    grid-template-columns: auto 24px;
    grid-template-rows: auto;
    top: 0;
  }
  .link-pure {
    display: inline-block;
  }
  .link {
    display: none;
  }
}

@media(min-width:1760px) {
  .root {
    padding-top: 100%;
  }
  .content {
    background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
    grid-template-rows: auto auto;
    grid-template-columns: auto;
  }
  .link-pure {
    display: none;
  }
  .link {
    display: inline-block;
  }
}

@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover ::slotted(picture), .root:hover ::slotted(img) {
    transform: scale3d(1.05, 1.05, 1.05) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: 1:1, size: inherit, weight: regular, align: bottom, isCompact: false and hasGradient: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture),::slotted(img) {
  transition: transform var(--p-transition-duration, .24s) ease !important;
  backface-visibility: hidden !important;
  -webkit-backface-visibility: hidden !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
p {
  color: #FBFCFF;
  max-width: 34.375rem;
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: inherit;
  font-weight: 400;
}
.root {
  height: 0;
  position: relative;
  transform: translate3d(0,0,0);
  padding-top: 100%;
}
.image-container {
  position: absolute;
  overflow: hidden;
  border-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  display: grid;
  justify-items: start;
  border-radius: 8px;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  gap: 16px;
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
  grid-template-rows: auto auto;
  grid-template-columns: auto;
}
.link-pure {
  display: none;
}
.link {
  min-height: 54px;
  display: inline-block;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover ::slotted(picture), .root:hover ::slotted(img) {
    transform: scale3d(1.05, 1.05, 1.05) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: 3:4, size: default, weight: semibold, align: top, isCompact: false and hasGradient: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture),::slotted(img) {
  transition: transform var(--p-transition-duration, .24s) ease !important;
  backface-visibility: hidden !important;
  -webkit-backface-visibility: hidden !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
p {
  color: #FBFCFF;
  max-width: 34.375rem;
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 600;
}
.root {
  height: 0;
  position: relative;
  transform: translate3d(0,0,0);
  padding-top: 133.33%;
}
.image-container {
  position: absolute;
  overflow: hidden;
  border-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  display: grid;
  justify-items: start;
  border-radius: 8px;
  padding: clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px) clamp(32px, 2.75vw + 23px, 76px);
  gap: 16px;
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
  grid-template-rows: auto auto;
  grid-template-columns: auto;
}
.link-pure {
  display: none;
}
.link {
  min-height: 54px;
  display: inline-block;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover ::slotted(picture), .root:hover ::slotted(img) {
    transform: scale3d(1.05, 1.05, 1.05) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: 4:3, size: default, weight: semibold, align: bottom, isCompact: false and hasGradient: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture),::slotted(img) {
  transition: transform var(--p-transition-duration, .24s) ease !important;
  backface-visibility: hidden !important;
  -webkit-backface-visibility: hidden !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
p {
  color: #FBFCFF;
  max-width: 34.375rem;
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 600;
}
.root {
  height: 0;
  position: relative;
  transform: translate3d(0,0,0);
  padding-top: 75%;
}
.image-container {
  position: absolute;
  overflow: hidden;
  border-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  display: grid;
  justify-items: start;
  border-radius: 8px;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  gap: 16px;
  background: linear-gradient(to top, rgba(31,31,31,0.9) 0%,rgba(31,31,31,0.9) 20%,rgba(31,31,31,0.852589) 26.67%,rgba(32,32,32,0.768225) 33.33%,rgba(33,33,33,0.668116) 40%,rgba(34,34,34,0.557309) 46.67%,rgba(35,35,35,0.442691) 53.33%,rgba(36,36,36,0.331884) 60%,rgba(37,37,37,0.231775) 66.67%,rgba(38,38,38,0.147411) 73.33%,rgba(39,39,39,0.0816599) 80%,rgba(39,39,39,0.03551) 86.67%,rgba(39,39,39,0.0086472) 93.33%,rgba(39,39,39,0) 100%);;
  grid-template-rows: auto auto;
  grid-template-columns: auto;
}
.link-pure {
  display: none;
}
.link {
  min-height: 54px;
  display: inline-block;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover ::slotted(picture), .root:hover ::slotted(img) {
    transform: scale3d(1.05, 1.05, 1.05) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: 9:16, size: default, weight: semibold, align: bottom, isCompact: false and hasGradient: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture),::slotted(img) {
  transition: transform var(--p-transition-duration, .24s) ease !important;
  backface-visibility: hidden !important;
  -webkit-backface-visibility: hidden !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
p {
  color: #FBFCFF;
  max-width: 34.375rem;
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 600;
}
.root {
  height: 0;
  position: relative;
  transform: translate3d(0,0,0);
  padding-top: 177.75%;
}
.image-container {
  position: absolute;
  overflow: hidden;
  border-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  display: grid;
  justify-items: start;
  border-radius: 8px;
  padding: clamp(32px, 2.75vw + 23px, 76px) clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px);
  gap: 16px;
  grid-template-rows: auto auto;
  grid-template-columns: auto;
}
.link-pure {
  display: none;
}
.link {
  min-height: 54px;
  display: inline-block;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover ::slotted(picture), .root:hover ::slotted(img) {
    transform: scale3d(1.05, 1.05, 1.05) !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for aspectRatio: 16:9, size: inherit, weight: regular, align: top, isCompact: true and hasGradient: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(picture),::slotted(img) {
  transition: transform var(--p-transition-duration, .24s) ease !important;
  backface-visibility: hidden !important;
  -webkit-backface-visibility: hidden !important;
}
::slotted(picture) {
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  right: 0 !important;
  bottom: 0 !important;
}
::slotted(img) {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}
p {
  color: #FBFCFF;
  max-width: 34.375rem;
  margin: 0;
  font: normal normal 400 clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: inherit;
  font-weight: 400;
}
.root {
  height: 0;
  position: relative;
  transform: translate3d(0,0,0);
  padding-top: 56.25%;
}
.image-container {
  position: absolute;
  overflow: hidden;
  border-radius: 8px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}
.content {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  display: grid;
  justify-items: start;
  border-radius: 8px;
  padding: clamp(16px, 1.25vw + 12px, 36px) clamp(16px, 1.25vw + 12px, 36px) clamp(32px, 2.75vw + 23px, 76px);
  gap: 16px;
  align-items: center;
  grid-template-columns: auto 24px;
  grid-template-rows: auto;
}
.link-pure {
  display: inline-block;
}
.link {
  min-height: 54px;
  display: none;
}
.link-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  outline: 0;
}
@media (forced-colors: active) {
  .content {
    background: rgba(0,0,0,0.7);
  }
}

@media(hover:hover) {
  .root:hover ::slotted(picture), .root:hover ::slotted(img) {
    transform: scale3d(1.05, 1.05, 1.05) !important;
  }
}
"
`;

exports[`getSlottedCss() should return correct css 1`] = `
"p-link-tile picture > img {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix 1`] = `
"prefixed-p-link-tile picture > img {
  height: 100% !important;
  width: 100% !important;
  object-fit: cover !important;
}"
`;
